--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   equatable: ^2.0.8
+  flutter_bloc: ^9.1.1
+  bloc: ^9.2.0
 
 dev_dependencies:
   flutter_test:
